--- a/css/custom.css
+++ b/css/custom.css
@@ -1,3 +1,7 @@
+header{
+    margin-top: 1rem;
+}
+
 h3.logo-footer{
     margin-top: 1px;
     color: #fff;
@@ -38,6 +42,6 @@ h3.logo-footer{
 
         .article img {
             width: 100%;
-            height: 200px; /* Ajusta la altura según tus necesidades */
+            height: 200px; /* Ajusta la altura segï¿½n tus necesidades */
             object-fit: cover; /* Ajusta la propiedad de la imagen para cubrir la caja */
         }
