--- a/css/section.css
+++ b/css/section.css
@@ -1,17 +1,23 @@
-﻿/ @media (max-width: 768px) {
-      .article-container .article {
-        margin-bottom: 20px;
-      }
+﻿/* Estilos generales */
+@media (max-width: 768px) {
+  #section1{
+    margin-left: 6rem;
+  }
+  .article-container .article {
+    margin-bottom: 20px;
+    text-align: center; /* Centrar el contenido en dispositivos pequeños */
+  }
 
-      .article p {
-        overflow: hidden;
-        text-overflow: ellipsis;
-        white-space: nowrap;
-      }
+  .article p {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+  }
 
-      .article img {
-        width: 100%;
-        height: auto;
-        display: block;
-      }
-    }
+  .article img {
+    width: 100%;
+    height: auto;
+    display: block;
+    margin: 0 auto; /* Centrar la imagen en dispositivos pequeños */
+  }
+}
